--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link href="/style.css" rel="stylesheet">
+  <title>Stopwatch</title>
+  <link href="./style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,7 +55,7 @@
 
     </div>
   </main>
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
